# miniz-cpp

./: CHANGELOG.txt  CMakeLists.txt
examples/: pipe.cpp  read.cpp  write.cpp
include/: miniz.h  miniz.hpp  zip_file.hpp
tests/: test.cpp  test.xlsx.S
